--- a/index.html
+++ b/index.html
@@ -45,20 +45,18 @@
         #messages li {
             padding: 5px 10px;
         }
-
-        #messages li:nth-child(odd) {
-            background: #eee;
-        }
     </style>
 </head>
 
 <body>
     <ul id="messages"></ul>
+
     <form action="">
+        <div id="typing" style="color:white"></div>
         <input id="m" autocomplete="off" /><button>Send</button>
     </form>
-
-
+    <input type="hidden" id="sender" value="5b8eb4a991969e291ffe52f1">
+    <input type="hidden" id="receiver" value="5b8eb220e6023e2695c8b034">
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script>
     <script src="chat.js"></script>
